--- a/main.html
+++ b/main.html
@@ -4,26 +4,95 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Table</title>
+	  <!--<style>
+		  table,th,td {
+    border:1px solid black;
+}
+table {
+    width: 100%; 
+    height: 100%;
+}
+th,td {
+    width:50%;
+}
+ul,td {
+    text-align:center;
+}
+#tb1>tr{
+    display:inline;
+}
+	  </style>-->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100% border:black solid">
+    <table style="width: 100%; height: 100%" id="tb1">
       <tr>
 		  <td>
-			  Nested Table 2
+			  <table>
+				  <tr>
+					  <th colspan="2">
+						  Nested Table 2
+					  </th>
+				  </tr>
+				  <tr>
+					  <th>
+						  Column 1
+					  </th>
+					  <th>
+						  Column 2
+					  </th>
+				  </tr>
+				  <tr>
+					  <td>abc</td>
+					  <td>def</td>
+				  </tr>
+			  </table>
 		  </td>
 		  <td>
-			  Nested Table 1
+			  <table>
+				  <tr>
+					  <th>
+						   Nested Table 1
+					  </th>
+				  </tr>
+				  <tr>
+					  <td>
+						  <ul>
+							  <li>List item</li>
+						      <li>List item</li>
+						      <li>List item</li>
+					      </ul>
+					  </td>
+				  </tr>
+			  </table>
 		  </td>
 	  </tr>
 		<tr>
 		  <td>
-			  Nested Table 3
-		  </td>
-		  <td>
-			  Nested Table 4
-		  </td>
-	  </tr>
-    </table>
-  </body>
+            <table>
+                <tr>
+                    <th  colspan="2"> 
+                        Nested Table 3
+                    </th>
+                </tr>
+                    <tr>
+                        <td><a href=" ">Nested Table</a></td>
+                        <td>Demo Continued</td>
+                    </tr>
+            </table>
+        </td>
+        <td>
+            <table>
+                <tr>
+                    <th>
+                         Nested Table 4
+                    </th>
+                </tr>
+                <tr>
+                    <td style="background-color:black; color:white">HTML</td>
+            </table>
+        </td>
+    </tr>
+  </table>
+</body>
 </html>
